--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:js": "browserify app/main.js -t [ babelify --presets [es2015 react] ] -o public/js/bundle.js",
     "deploy": "npm test && git push heroku master",
     "postinstall": "npm run build",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "npm run test:client && npm run test:server",
     "test:client": "mocha test/client --recursive --compilers js:babel-register",
     "test:server": "mocha test/server --recursive --compilers js:babel-register",
